# pyblog

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md
blog/: admin.py  feeds.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_post_tags.py
blog/templates/blog/: base.html
blog/templates/blog/post/: detail.html  list.html  search.html  share.html
blog/templatetags/: blog_tags.py
djangoRest/: settings.py  urls.py
