[tool.poetry]
name = "djangoBlog"
version = "0.1.0"
description = ""
authors = ["Guillaume Kinif <guillaume.kinif@collibra.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
django-taggit = "^2.1.0"
Markdown = "^3.3.6"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
